--- a/S. Bikulcius Thesis/analysis_report.Rmd
+++ b/S. Bikulcius Thesis/analysis_report.Rmd
@@ -23,19 +23,114 @@ library(glmmTMB)
 library(janitor)
 library(ggpubr)
 library(patchwork)
+library(gt)
+library(gtsummary)
+library(ggridges)
 
 # Loading saved data
 
+## Pupil Dilation Data
+
+pupil <- rio::import("Data/cleaned_data.csv") |>
+  # Getting Analysis Window
+  dplyr::filter(timebins >= 500) |>
+  dplyr::group_by(subject, trial) |>
+  dplyr::filter(timebins <= max(timebins) - 2000) |>
+  dplyr::ungroup() |>
+  # Getting Peak Pupil Dilation Value
+  dplyr::group_by(subject, trial, speaker, code, rep_acc) |>
+  dplyr::summarize(peak_pupil = max(pupil.binned)) |>
+  dplyr::ungroup()
+
+## Cognitive Data
+
+cog <- rio::import("Data/cleaned_cog_data.csv")
+
+## Listener Demographics
+
+demo <- rio::import("Data/cleaned_listener_demo.csv") |>
+  dplyr::mutate(gender = factor(gender, levels = c("Man", "Woman", "Nonbinary", "Questioning", "Prefer not to answer")),
+                ethnicity = factor(ethnicity, levels = c("Hispanic/Latino(a/e)", "Not Hispanic/Latino(a/e)", "Prefer not to answer")),
+                race = factor(race, levels = c("white/Caucasian", "Black/African American", "Asian/Asian American",
+                                               "Native Hawaiian or Other Pacific Islander", "Native American or Alaska Native",
+                                               "Biracial or Multiracial", "Prefer not to answer", "Race not listed")),
+                native_lang = factor(native_lang, c("American English", "Not American English")))
 ```
 
-# Participant Demographics
 
+# Listener Characteristics
 
+## Demographics
 
-```{r pressure, echo=FALSE}
+The participant age range is from 18 to 39 years old. All participants reported they were fluent in English. However, two participants indicated that their native language is not American English. Their native languages were Spanish and Turkish respectively.
 
-plot(pressure)
+```{r}
+
+demo_table <- demo |>
+  dplyr::select(age, gender, ethnicity, race, native_lang) |>
+  tbl_summary(type = list(age ~ "continuous",
+                          gender ~ "categorical",
+                          ethnicity ~ "categorical",
+                          race ~ "categorical",
+                          native_lang ~ "categorical"),
+              statistic = list(all_continuous() ~ "{mean} ({sd})",
+                               all_categorical() ~ "{n} ({p}%)"),
+              digits = list(everything() ~ c(2)),
+              label = list(age ~ "Age",
+                           gender ~ "Gender",
+                           ethnicity ~ "Ethnicity",
+                           race ~ "Race",
+                           native_lang ~ "Native Language")) |>
+  as_gt()
+
+demo_table
+
+demo_table |>
+  gt::gtsave("Tables/demo_table.html")
 
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+## Cognition
+
+### Descriptives
+
+```{r}
+
+cog_table <- cog |>
+  dplyr::select(-subject) |>
+  # Just using the age-corrected scores
+  dplyr::select(ends_with("_c")) |>
+  tbl_summary(statistic = list(all_continuous() ~ "{mean} ({sd})"),
+              digits = list(everything() ~ c(2)),
+              label = list(list_sort_c ~ "Working Memory",
+                           flanker_c ~ "Inhibitory Control",
+                           card_sort_c ~ "Cognitive Flexibility",
+                           pattern_c ~ "Processing Speed")) |>
+  as_gt()
+
+cog_table
+
+```
+
+### Distribution
+
+```{r}
+
+cog |>
+  dplyr::select(subject, ends_with("_c")) |>
+  tidyr::pivot_longer(cols = list_sort_c:pattern_c,
+                      names_to = "cog_measure",
+                      values_to = "score") |>
+  ggplot() +
+  aes(x = score,
+      y = cog_measure,
+      color = cog_measure,
+      fill = cog_measure) +
+  geom_density_ridges(jittered_points = T,
+                      position = position_points_jitter(width = 0.05, height = 0),
+                      point_shape = '|', point_size = 3, point_alpha = 1, alpha = 0.5) +
+  theme_classic()
+
+```
+
