--- a/S. Bikulcius Thesis/analysis_report.Rmd
+++ b/S. Bikulcius Thesis/analysis_report.Rmd
@@ -38,7 +38,7 @@ pupil <- rio::import("Data/cleaned_data.csv") |>
   dplyr::filter(timebins <= max(timebins) - 2000) |>
   dplyr::ungroup() |>
   # Getting Peak Pupil Dilation Value
-  dplyr::group_by(subject, trial, speaker, code, rep_acc) |>
+  dplyr::group_by(subject, trial, speaker, code, rep_acc, target_number, correct_words) |>
   dplyr::summarize(peak_pupil = max(pupil.binned)) |>
   dplyr::ungroup()
 
@@ -113,6 +113,9 @@ cog_table <- cog |>
 
 cog_table
 
+cog_table |>
+  gt::gtsave("Tables/cog_table.html")
+
 ```
 
 ### Distribution
@@ -147,7 +150,39 @@ rm(demo, demo_table)
 
 ```{r}
 
+pupil <- pupil |>
+  # removing trials with missing rep accuracy
+  dplyr::mutate(rep_acc = ifelse(rep_acc == "", NA, rep_acc)) |>
+  dplyr::filter(!is.na(rep_acc)) |>
+  dplyr::mutate(speaker = factor(speaker, levels = c("Control", "ALS")),
+                trial_c = trial - 6,
+                rep_acc = factor(rep_acc, levels = c("accurate", "inaccurate")))
 
+speaker_table <- pupil |>
+  dplyr::select(subject, trial, speaker, correct_words, target_number, rep_acc) |>
+  dplyr::distinct() |>
+  dplyr::mutate(intel = (correct_words/target_number)*100) |>
+  dplyr::select(-c(subject, trial, correct_words, target_number)) |>
+  tbl_summary(by = speaker,
+              type = list(intel ~ "continuous",
+                          rep_acc ~ "categorical"),
+              statistic = list(all_continuous() ~ "{mean} ({sd})",
+                               all_categorical() ~ "{n} ({p}%)"),
+              digits = list(everything() ~ c(2)),
+              label = list(intel ~ "Intelligibility",
+                           rep_acc ~ "Repetition Accuracy")) |>
+  as_gt()
+
+speaker_table
+
+speaker_table |>
+  gt::gtsave("Tables/speaker_table.html")
+
+```
+
+```{r}
+
+rm(speaker_table, cog_table)
 
 ```
 
